--- a/public/styles.css
+++ b/public/styles.css
@@ -14,6 +14,10 @@ hr{
 h2{
     color:gray;
 }
+strong{
+    /* text-decoration: underline; */
+    font-size:30px;
+}
 
 
 /* Header */
@@ -26,6 +30,13 @@ h2{
     margin:0;
     padding-top:25px;
     padding-left:40px;
+    display: inline-block;
+}
+#header h2{
+    /* display: inline-block; */
+    float:right;
+    padding-top:15px;
+    padding-right:40px;
 }
 
 /* Content */
@@ -139,13 +150,13 @@ label{
 
 }
 #main-block p{
-    font-size:18px;
-    line-height:1;
+    font-size:16px;
+    line-height:1.2;
     color:gray;
     padding-left:15px;
     
 }
-#menu #spacer{
+#menu .spacer{
     color:white;
 }
 #option-checkbox-div{
@@ -158,6 +169,9 @@ right:8px;
 #option-text-div{
     width:90%;
     /* display: inline; */
+}
+#menu h3{
+    line-height: .5;
 }
 
 /* Comment/Submit section */
